--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,26 +1,36 @@
 ---
 - set_fact:
-    ansible_distro: "{{ ansible_distribution|lower|replace('\"', '') }}"
+    ansible_distro: "{{ ansible_facts.distribution|lower|replace('\"', '') }}"
+  tags:
+    - always
 
 - name: gather os specific variables
   include_vars: "{{ item }}"
   with_first_found:
     - files:
       - "{{ ansible_distro }}-{{
-            ansible_distribution_version|lower|replace('/', '_') }}.yml"
-      - "{{ ansible_distro }}-{{ ansible_distribution_release }}.yml"
+            ansible_facts.distribution_version|lower|replace('/', '_') }}.yml"
+      - "{{ ansible_distro }}-{{ ansible_facts.distribution_release }}.yml"
       - "{{ ansible_distro }}-{{
-            ansible_distribution_major_version|lower|replace('/', '_') }}.yml"
+            ansible_facts.distribution_major_version|lower|replace('/', '_') }}.yml"
       - "{{ ansible_distro }}.yml"
-      - "{{ ansible_os_family|lower }}.yml"
+      - "{{ ansible_facts.os_family|lower }}.yml"
       paths:
-      - ../vars
+        - "../vars"
       skip: true
+  tags:
+    - always
 
 - name: ensure ntp package is absent
   package:
     name: ntp
     state: absent
+  tags:
+    - chrony
+    - time
+    - package
+    - service
+    - install
 
 - name: ensure chrony requirements packages are installed
   package:
@@ -28,6 +38,12 @@
     state: "{{ chrony_package_state }}"
   with_items: "{{ chrony_pre_packages }}"
   when: chrony_pre_packages|length > 0
+  tags:
+    - chrony
+    - time
+    - package
+    - service
+    - install
 
 - name: ensure chrony packages are installed
   package:
@@ -35,6 +51,12 @@
     state: "{{ chrony_package_state }}"
   with_items: "{{ chrony_packages }}"
   when: chrony_packages|length > 0
+  tags:
+    - chrony
+    - time
+    - package
+    - service
+    - install
 
 - name: update chrony.conf from template
   template:
@@ -45,13 +67,24 @@
     mode: 0644
     backup: yes
   register: chrony_conf
+  tags:
+    - chrony
+    - time
+    - package
+    - config
 
 - name: ensure chrony service is restarted if necessary
   service:
     name: "{{ item }}"
     state: restarted
   with_items: "{{ chrony_services }}"
-  when: chrony_services|length > 0 and chrony_conf|changed
+  when: chrony_services|length > 0 and chrony_conf is changed
+  tags:
+    - chrony
+    - time
+    - package
+    - service
+    - install
 
 - name: ensure chrony service is started and enabled
   service:
@@ -60,3 +93,11 @@
     state: started
   with_items: "{{ chrony_services }}"
   when: chrony_services|length > 0
+  tags:
+    - chrony
+    - time
+    - package
+    - service
+    - install
+
+# vim: syntax=yaml ts=2 sw=2 et sr softtabstop=2 autoindent
