--- a/templates/chrony.conf
+++ b/templates/chrony.conf
@@ -1,22 +1,111 @@
+# {{ ansible_managed }}
+
+# Welcome to the chrony configuration file. See chrony.conf(5) for more
+# information about usuable directives.
+
+# This will use (up to):
+# - 4 sources from ntp.ubuntu.com which some are ipv6 enabled
+# - 2 sources from 2.ubuntu.pool.ntp.org which is ipv6 enabled as well
+# - 1 source from [01].ubuntu.pool.ntp.org each (ipv4 only atm)
+# This means by default, up to 6 dual-stack and up to 2 additional IPv4-only
+# sources will be used.
+# At the same time it retains some protection against one of the entries being
+# down (compare to just using one of the lines). See (LP: #1754358) for the
+# discussion.
+#
+# About using servers from the NTP Pool Project in general see (LP: #104525).
+# Approved by Ubuntu Technical Board on 2011-02-08.
+# See http://www.pool.ntp.org/join.html for more information.
+#pool ntp.ubuntu.com        iburst maxsources 4
+#pool 0.ubuntu.pool.ntp.org iburst maxsources 1
+#pool 1.ubuntu.pool.ntp.org iburst maxsources 1
+#pool 2.ubuntu.pool.ntp.org iburst maxsources 2
 {% for server in chrony_ntp_servers -%}
 server {{ server }} {{ chrony_server_settings }}
 {% endfor -%}
 
+# This directive specify the location of the file containing ID/key pairs for
+# NTP authentication.
+#keyfile /etc/chrony/chrony.keys
 keyfile {{ chrony_keyfile_path }}
 
+# This directive specify the file into which chronyd will store the rate
+# information.
+#driftfile /var/lib/chrony/chrony.drift
 driftfile {{ chrony_driftfile_path }}
+
+# Uncomment the following line to turn logging on.
 log tracking measurements statistics
+
+# Log files location.
 logdir /var/log/chrony
+
+# Stop bad estimates upsetting machine clock.
 maxupdateskew 100.0
+
+# This directive enables kernel synchronisation (every 11 minutes) of the
+# real-time clock. Note that it can’t be used along with the 'rtcfile' directive.
+#rtcsync
+rtcsync
+{{ chrony_rtc }}
+
+# Step the system clock instead of slewing it if the adjustment is larger than
+# one second, but only in the first three clock updates.
+makestep 1 3
+
+
+
+
+
+# This directive sets the key ID used for authenticating user commands via the
+# 'chronyc' program at run time.
+commandkey 1
+
+# Dump measurements when daemon exits.
+dumponexit
+
+# Specify directory for dumping measurements.
+dumpdir /var/lib/chrony
+
+# This directive lets 'chronyd' to serve time even if unsynchronised to any
+# NTP server.
+
+#local stratum 10
+local stratum 10
+
+# This directive designates subnets (or nodes) from which NTP clients are allowed
+# to access to 'chronyd'.
+
+#allow foo.example.net
+#allow 10/8
+#allow 0/0 (allow access by any IPv4 node)
+#allow ::/0 (allow access by any IPv6 node)
+allow 127.0.0.1
+allow ::1
+
+# This directive forces `chronyd' to send a message to syslog if it
+# makes a system clock adjustment larger than a threshold value in seconds.
+logchange 0.5
+
+# This directive defines an email address to which mail should be sent
+# if chronyd applies a correction exceeding a particular threshold to the
+# system clock.
+
+# mailonchange root@localhost 0.5
+
+# This directive tells 'chronyd' to parse the 'adjtime' file to find out if the
+# real-time clock keeps local time or UTC. It overrides the 'rtconutc' directive.
+hwclockfile /etc/adjtime
+
+
+
+
+
+# REDHAT stuff
 {% if chrony_max_step is defined -%}
 {{ chrony_max_step }}
 {% endif -%}
 
-dumponexit
-dumpdir /var/lib/chrony
-local stratum 10
-logchange 0.5
-{{ chrony_rtc }}
 {% if chrony_client_log is defined -%}
 {{ chrony_client_log }}
 {% endif -%}
