--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,6 +6,7 @@
 
 - name: gather os specific variables
   include_vars: "{{ item }}"
+  ignore_errors: yes
   with_first_found:
     - files:
       - "{{ ansible_distro }}-{{
@@ -17,7 +18,6 @@
       - "{{ ansible_facts.os_family|lower }}.yml"
       paths:
         - "../vars"
-      skip: true
   tags:
     - always
 
